--- a/index.html
+++ b/index.html
@@ -4,24 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="design/design.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html"><img src="imgs/logo.png" alt="page not found" width="150" height="100"></a>
+    <a href="index.html"><img src="imgs/logo.png" alt="page not found" width="130" height="80"></a>
     <br>
-    <table>
-        <tr>
-            <td>
-                <a href="procedures.html"><img src="imgs/procedure_box.png" alt="img not found" width="200">
-            </td>
-            <td>
-                <a href="simulators.html"><img src="imgs/simulators.png" alt="img not found" width="200"></a>
-            </td>
-            <td>
-                <a href="videos.html"><img src="imgs/videos.png" alt="img not found" width="200"></a>
-            </td>
-        </tr>
-    </table>
+          <div class="exp1"><a href="language of chemistry.html"><img src="imgs/language of chemistry.png" alt="img not found"></a>
+
+           <div class="name">Experiment 1: Language Of chemistry</div>
     
+    
+
 </body>
 </html>
