--- a/procedures.html
+++ b/procedures.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="design/design.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html"><img src="imgs/logo.png" alt="page not found" width="150" height="100"></a>
+    <a href="index.html"><img src="imgs/logo.png" alt="page not found" width="130" height="80"></a>
+    <hr>
 </body>
+
 </html>
